# amaru

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  flake.nix  release.toml
.cargo/: config.toml
.github/: check-license-header.config.json  nightly-downloads.template.html
.github/debian/: amaru.env  amaru.service  postinst
.github/rpm/: pre-install.sh  pre-uninstall.sh
.github/workflows/: continuous-integration.yml  docker-publish.yml  post-release.yml  publish-bootstrap-snapshots.yml  release.yml  template-cargo-test.yml  template-ledger-epoch-snapshots.yml  uplc-benchmarks.yml  uplc-ci.yml
Formula/: amaru.rb
crates/amaru/: Cargo.toml  build.rs
crates/amaru-consensus/: Cargo.toml
crates/amaru-consensus/benches/: headers_tree.rs  stage_msgs.rs
crates/amaru-consensus/src/: store.rs  validate_header.rs
crates/amaru-consensus/src/effects/: ledger_effects.rs  mod.rs  random_effects.rs  store_effects.rs
crates/amaru-consensus/src/headers_tree/: headers_tree.rs  headers_tree_display.rs
crates/amaru-consensus/src/stages/: README.md  test_utils.rs
crates/amaru-iter-borrow/: Cargo.toml
crates/amaru-kernel/: Cargo.toml
crates/amaru-kernel/src/: cardano.rs  lib.rs  macros.rs
crates/amaru-kernel/src/cardano/: address.rs  block.rs  consensus_parameters.rs  cost_models.rs  drep_voting_thresholds.rs  epoch.rs  era_history.rs  era_params.rs  ex_units.rs  ex_units_prices.rs  global_parameters.rs  network_name.rs  output_reference.rs  peer.rs  phase_two.rs  plutus_data.rs  point.rs  pool_voting_thresholds.rs  protocol_parameters.rs  protocol_version.rs  raw_block.rs  redeemer_tag.rs  redeemers.rs  required_script.rs  required_signers.rs  reward_account.rs  script_context.rs  script_info.rs  slot.rs  time_range.rs  transaction_id.rs  transaction_pointer.rs  tx_info.rs  utxos.rs  validity_interval.rs  value.rs  voting_procedure.rs
crates/amaru-kernel/src/traits/: as_index.rs
crates/amaru-ledger/: Cargo.toml  README.md  build.rs
crates/amaru-ledger/src/: bootstrap.rs  epoch_transition.rs  rules.rs  state.rs  store.rs
crates/amaru-ledger/src/rules/: block.rs
crates/amaru-ledger/tests/: evaluate_ledger_states.rs  state_rollback.rs
crates/amaru-mempool/: Cargo.toml
crates/amaru-metrics/: Cargo.toml
crates/amaru-metrics/src/: ledger.rs
crates/amaru-minicbor-extra/: Cargo.toml
crates/amaru-mithril/: Cargo.toml
crates/amaru-mithril/src/: lib.rs
crates/amaru-network/: Cargo.toml
crates/amaru-network/src/: connection.rs  socket_addr.rs
crates/amaru-observability/: Cargo.toml
crates/amaru-observability/macros/: Cargo.toml
crates/amaru-observability/src/: schemas.rs
crates/amaru-ouroboros/: Cargo.toml
crates/amaru-ouroboros-traits/: Cargo.toml
crates/amaru-ouroboros/src/: mempool.rs
crates/amaru-ouroboros/tests/: validation.rs
crates/amaru-plutus/: Cargo.toml
crates/amaru-plutus/src/: to_plutus_data.rs
crates/amaru-progress-bar/: Cargo.toml
crates/amaru-progress-bar/src/: terminal_progress_bar.rs
crates/amaru-protocols/: Cargo.toml
crates/amaru-protocols/src/: accept.rs  connection.rs  deserializers.rs  manager.rs  mempool_effects.rs  metrics_effects.rs  mux.rs  network_effects.rs  store_effects.rs
crates/amaru-pure-stage/: Cargo.toml
crates/amaru-pure-stage/src/: serde.rs  stagegraph.rs  trace_buffer.rs  trace_match.rs  types.rs
crates/amaru-pure-stage/tests/: functional.rs  simulation.rs  tokio.rs
crates/amaru-sim/: Cargo.toml  README.md
crates/amaru-sim/src/simulator/: args.rs  replay.rs  report.rs  run_config.rs  run_tests.rs  test_result.rs
crates/amaru-sim/src/simulator/data_generation/: base_generators.rs
crates/amaru-sim/tests/: replay_test.rs  traces_test.rs
crates/amaru-stores/: Cargo.toml
crates/amaru-stores/src/: lib.rs
crates/amaru-tracing-json/: Cargo.toml
crates/amaru-uplc/: Cargo.toml  build.rs
crates/amaru-uplc/src/: arena.rs  bls.rs  constant.rs  data.rs  ledger_value.rs  lib.rs  program.rs  term.rs  typ.rs
crates/amaru-uplc/tests/: conformance.rs  conformance_extra.rs  conformance_flat.rs
crates/amaru/config/bootstrap/mainnet/: snapshots.json
crates/amaru/config/bootstrap/preprod/: snapshots.json
crates/amaru/config/bootstrap/preview/: snapshots.json
crates/amaru/src/: bootstrap.rs  lib.rs  metrics.rs  observability.rs  panic.rs  submit_api.rs  version.rs
crates/amaru/src/cardano_node/: mod.rs  tvar.rs
crates/amaru/src/stages/: build_node.rs  build_stage_graph.rs  config.rs
crates/amaru/src/tests/: assertions.rs  configuration.rs  in_memory_connection_provider.rs  node.rs  nodes.rs  setup.rs  test_cases.rs  test_data.rs
crates/amaru/tests/: cli.rs  summary.rs
crates/amaru/wix/: main.wxs  register-completion.ps1  unregister-completion.ps1
crates/pure-stage/: Cargo.toml
crates/pure-stage/src/: effect.rs
crates/pure-stage/src/simulation/running/: mod.rs
crates/pure-stage/tests/: simulation.rs
docker/: Dockerfile.amaru  README.md
docker/gliveview/: Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh
docs/: BOOTSTRAP.md  PUBLISHING_SNAPSHOTS.md  TESTING.md  TRACES.md  traces-schema.json
engineering-decision-records/: 011-deterministic-simulation-testing.md  012-interaction-between-consensus-and-ledger.md  015-recording-cardano-metrics.md  019-guidelines-for-writing-cli.md  021-switching-to-own-mini-protocols.md  024-peer-handling-infrastructure.md  025-release-and-distribution-workflow.md  026-tracing-span-design.md
monitoring/: README.md  docker-compose.yml  otlp-collector.yml
monitoring/basic/: otlp-collector.yml
monitoring/profiles/jaeger/: docker-compose.yml  jaeger.yml  otlp-collector.yml
monitoring/profiles/prometheus/: docker-compose.yml  otlp-collector.yml
monitoring/profiles/tempo/: docker-compose.yml  otlp-collector.yml
scripts/: compare-traces  generate-homebrew-formula  generate-nix-flake  generate-winget-manifests  publish-bootstrap-snapshots  render-nightly-downloads-page  unused-schemas  update-readme-installation-sections
simulation/amaru-sim/: Cargo.toml
(+260 files in other folders)
