[workspace.package]
edition = "2024"
description = "A Cardano blockchain node implementation"
license = "Apache-2.0"
authors = ["Amaru Maintainers <amaru@pragma.builders>"]
repository = "https://github.com/pragma-org/amaru"
homepage = "https://github.com/pragma-org/amaru"
documentation = "https://docs.rs/amaru"
keywords = ["cardano", "blockchain", "node", "ouroboros", "crypto"]
categories = ["cryptography::cryptocurrencies"]
rust-version = "1.97" # Find versions here: https://rust-lang.github.io/rustup-components-history

[workspace]
members = ["crates/*", "crates/amaru-observability/macros/", "crates/vendor/*"]
exclude = ["crates/vendor"]
default-members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
# External dependencies
acto = { version = "0.8.0", features = ["tokio"] }
anyhow = "1.0.100"
append-only-vec = "0.1.8"
async-compression = { version = "0.4.32", features = ["tokio", "gzip"] }
async-trait = "0.1.83"
axum = "0.8"
assert-json-diff = "2.0.2"
bech32 = "0.11.0"
binrw = "0.15.0"
blst = "0.3.16"
bumpalo = "3.19.1"
bytes = "1.10.1"
cbor-data = "0.8.19"
cbor4ii = { version = "1.1.1", features = ["serde1", "use_std"] }
chumsky = "1.0.0-alpha.8"
clap = { version = "4.5.48", features = ["derive", "env"] }
clap_complete = "4.5.59"
clap_mangen = "0.3.0"
cryptoxide = "0.4.4"
either = "1.15"
erased-serde = "0.4.9"
flate2 = "1.1.2"
futures-util = "0.3.31"
getrandom = { version = "0.3", features = ["wasm_js"] }
hamming = "0.1.3"
hex = "0.4.3"
indicatif = "0.18.0"
include_dir = "0.7.4"
indexmap = { version = "2.6", features = ["serde"] }
indoc = "2.0"
inventory = "0.3"
itertools = "0.14.0"
minicbor = { version = "0.25.1", features = ["std", "half", "derive"] } # Must match the version used by pallas
mithril-client = { version = "0.12.34", default-features = false, features = ["fs", "num-integer-backend", "rustls-tls"] }
num = { version = "0.4.3", default-features = false, features = ["alloc"] }
num-bigint = "0.4.6"
num-integer = "0.1.46"
opentelemetry = "0.31.0"
opentelemetry-appender-tracing = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = [
  "grpc-tonic",
  "http-proto",
  "logs",
  "reqwest-blocking-client",
] }
opentelemetry-semantic-conventions = { version = "0.31.0", features = ["semconv_experimental"] }
opentelemetry_sdk = { version = "0.31.0", features = ["logs"] }
pallas-addresses = "0.34.0"
pallas-codec = "0.34.0" # When updating, double check that minicbor doesn't need to be updated too (see https://github.com/txpipe/pallas/blob/v0.32.0/pallas-codec/Cargo.toml#L22)
pallas-crypto = "0.34.0"
pallas-hardano = "0.34.0"
pallas-math = "0.34.0"
pallas-network = "0.34.0"
pallas-primitives = "0.34.0"
pallas-traverse = "0.34.0"
parking_lot = "0.12.3"
proc-macro2 = "1.0"
quote = "1.0"
rand = "0.9.2"
rayon = "1.10"
reqwest = { version = "0.12.20", default-features = false, features = ["json", "stream", "rustls-tls"] }
rocksdb = { version = "0.24.0", default-features = false, features = [
  "bindgen-runtime",
  "snappy",
  "multi-threaded-cf"
] }
rustversion = "1.0.22"
secp256k1 = "0.30.0"
serde = { version = "1.0.228", default-features = false }
serde_json = { version = "1.0.145", default-features = false }
sha3 = "0.10.8"
socket2 = "0.6.1"
syn = { version = "2.0", features = ["full"] }
sysinfo = "0.37.1"
tar = "0.4.44"
thiserror = "2.0.17"
tokio = { version = "1.45.0", features = ["sync"] }
tokio-util = "0.7.17"
toml = "0.9.8"
tracing = { version = "0.1.40", features = ["valuable"] }
tracing-opentelemetry = "0.32.1"
tracing-subscriber = { version = "0.3.20", features = [
  "env-filter",
  "std",
  "json",
] }
typetag = "0.2.21"
zeroize = "1.8.2"

# Internal dependencies
amaru = { path = "crates/amaru" }
amaru-consensus = { path = "crates/amaru-consensus", version = "0.1.2" }
amaru-fixture-builder = { path = "crates/amaru-fixture-builder", version = "0.1.2" }
amaru-iter-borrow = { path = "crates/amaru-iter-borrow", version = "0.1.2" }
amaru-kernel = { path = "crates/amaru-kernel", version = "0.1.2" }
amaru-ledger = { path = "crates/amaru-ledger", version = "0.1.2" }
amaru-mempool = { path = "crates/amaru-mempool", version = "0.1.2" }
amaru-metrics = { path = "crates/amaru-metrics", version = "0.1.2" }
amaru-minicbor-extra = { path = "crates/amaru-minicbor-extra", version = "0.1.2" }
amaru-mithril = { path = "crates/amaru-mithril", version = "0.1.2" }
amaru-network = { path = "crates/amaru-network", version = "0.1.2" }
amaru-observability = { path = "crates/amaru-observability", version = "0.1.2" }
amaru-observability-macros = { path = "crates/amaru-observability/macros", version = "0.1.2" }
amaru-ouroboros = { path = "crates/amaru-ouroboros", version = "0.1.2" }
amaru-ouroboros-traits = { path = "crates/amaru-ouroboros-traits", version = "0.1.2" }
amaru-plutus = { path = "crates/amaru-plutus", version = "0.1.2" }
amaru-progress-bar = { path = "crates/amaru-progress-bar", version = "0.1.2" }
amaru-protocols = { path = "crates/amaru-protocols", version = "0.1.2" }
amaru-pure-stage = { path = "crates/amaru-pure-stage", version = "0.1.2" }
amaru-sim = { path = "crates/amaru-sim", version = "0.1.2" }
amaru-stores = { path = "crates/amaru-stores", version = "0.1.2" }
amaru-tracing-json = { path = "crates/amaru-tracing-json", version = "0.1.2" }
amaru-uplc = { path = "crates/amaru-uplc", version = "0.4.0" }

# The vrf crate has not been fully tested in production environments and still has several upstream issues that are open PRs but not merged yet.
vrf_dalek = { package = "amaru-vrf-dalek", path = "crates/vendor/amaru-vrf-dalek", version = "0.1.0" }
kes-summed-ed25519 = { package = "amaru-kes-summed-ed25519", path = "crates/vendor/amaru-kes-summed-ed25519", version = "0.2.1" }
# curve25519-dalek fork used by vrf_dalek (txpipe/curve25519-dalek@70a36f41, branch ietf03_vrf_compat_ell2)
amaru-curve25519-dalek = { package = "amaru-curve25519-dalek", path = "crates/vendor/amaru-curve25519-dalek", version = "3.2.0" }

# dev-dependencies
assert_cmd = "2.2.2"
assertables = "9.8.2"
criterion = "0.7.0"
divan = "0.1.21"
ctor = "0.6.1"
insta = "1.43.2"
once_cell = "1.21.3"
ouroboros = "0.18.5"
pretty_assertions = "1.4.1"
proptest = { version = "1.8.0", default-features = false, features = ["std"] }
rand_distr = "0.5.1"
tempfile = "3.23.0"
test-case = "3.3.1"
trybuild = "1.0.115"

# build-dependencies
built = "0.8.0"
walkdir = "2.5.0"

[workspace.lints.rust]
rust-2018-idioms = "warn"
rust-2018-compatibility = "warn"
rust-2021-compatibility = "warn"
#rust-2024-compatibility = "warn"
nonstandard-style = { level = "deny" }
future-incompatible = { level = "deny" }

[workspace.lints.clippy]
# Enable clippy lints for all members
# * https://doc.rust-lang.org/clippy/lints.html


# Group lints

# pedantic = "warn"
# restriction = "warn"
# nursery = "warn"
# cargo = "warn"
# others are enabled by default, see table here: https://doc.rust-lang.org/clippy/

# Individual lints

# All lints are detailed here: https://rust-lang.github.io/rust-clippy/master/index.html
# allow-unwrap-in-tests = true
# unreachable = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unwrap_used = "warn"
wildcard_enum_match_arm = "warn"
print_stdout = "deny" # Breaks user piping, see https://github.com/rust-lang/rust/issues/119980

# See https://doc.rust-lang.org/cargo/reference/profiles.html

[profile.dev]
opt-level = 2
debug = false

[profile.dev-debug]
# Restore default 'dev' profile (see https://doc.rust-lang.org/cargo/reference/profiles.html#dev)
inherits = "dev"
opt-level = 0
debug = true

[profile.release]
lto = true
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true

[workspace.metadata.cross.target.aarch64-unknown-linux-musl]
pre-build = [
  "apt update",
  "apt install -y libclang-dev"
]
[workspace.metadata.cross.target.aarch64-unknown-linux-musl.env]
passthrough = ["LIBCLANG_PATH=/usr/lib/llvm-10/lib"]
