lints.workspace = true

[package]
name = "amaru-iter-borrow"
version = "0.1.2"
edition.workspace = true
description = "Iterator adaptor supporting mutable borrowing of elements"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "../../README.md"
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
minicbor.workspace = true
