[package]
name = "amaru-sim"
version = "0.1.2"
edition.workspace = true
description = "Simulation harness for testing the Amaru Cardano node"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
# External dependencies ───────────────────────────────────────────────────────┐
anyhow.workspace = true
cbor4ii.workspace = true
clap.workspace = true
hex.workspace = true
parking_lot.workspace = true
rand.workspace = true
rand_distr.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

# Internal dependencies ───────────────────────────────────────────────────────┐
amaru.workspace = true
amaru-consensus = { workspace = true, features = ["test-utils"] }
amaru-kernel = { workspace = true, features = ["test-utils"] }
amaru-ouroboros.workspace = true
amaru-protocols.workspace = true
amaru-pure-stage.workspace = true

[dev-dependencies]
# External dependencies ───────────────────────────────────────────────────────┐
proptest.workspace = true
rand.workspace = true
amaru-tracing-json.workspace = true

[[bin]]
name = "simulator"
path = "src/bin/amaru-sim/main.rs"
