lints.workspace = true

[package]
name = "amaru"
version = "10.10.0"
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "../../README.md"
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
build = "build.rs"
include = ["src/**/*", "config/**", "Cargo.toml", "build.rs"]
default-run = "amaru"

[[bin]]
name = "amaru"
path = "src/bin/amaru/main.rs"
doc = false

[[bin]]
name = "amaru-ledger"
path = "src/bin/ledger/main.rs"
doc = false

[dependencies]
# External dependencies ───────────────────────────────────────────────────────┐
anyhow.workspace = true
async-compression.workspace = true
axum.workspace = true
clap.workspace = true
clap_complete.workspace = true
clap_mangen.workspace = true
flate2.workspace = true
futures-util.workspace = true
hex.workspace = true
include_dir = { workspace = true, features = ["glob"] }
indoc.workspace = true
minicbor.workspace = true
opentelemetry-appender-tracing.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-semantic-conventions.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
pallas-hardano.workspace = true
pallas-network.workspace = true
parking_lot.workspace = true
rayon.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sysinfo.workspace = true
tar.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [
  "fs",
  "net",
  "rt",
  "rt-multi-thread",
  "signal",
] }
tokio-util.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

# Internal dependencies ───────────────────────────────────────────────────────┐
amaru-consensus = { workspace = true, features = ["test-utils"] }
amaru-kernel = { workspace = true, features = ["tracing"] }
amaru-ledger.workspace = true
amaru-mempool.workspace = true
amaru-metrics.workspace = true
amaru-mithril = { workspace = true, optional = true }
amaru-network.workspace = true
amaru-observability.workspace = true
amaru-ouroboros.workspace = true
amaru-plutus.workspace = true
amaru-progress-bar = { workspace = true, features = ["terminal"] }
amaru-protocols.workspace = true
amaru-pure-stage.workspace = true
amaru-stores.workspace = true

[target.'cfg(unix)'.dependencies]
rlimit = "0.10.2"

[features]
default = ["mithril"]
mithril = ["dep:amaru-mithril"]

[dev-dependencies]
# External dependencies ───────────────────────────────────────────────────────┐
assert_cmd.workspace = true
insta = { workspace = true, features = ["json"] }
test-case.workspace = true
rocksdb.workspace = true
quote.workspace = true
syn.workspace = true
tempfile.workspace = true

# Internal dependencies ───────────────────────────────────────────────────────┐
amaru-iter-borrow.workspace = true
amaru-kernel = { workspace = true, features = ["test-utils"] }
amaru-ouroboros-traits = { workspace = true, features = ["test-utils"] }

[build-dependencies]
built = { workspace = true, features = ["git2"] }
amaru-kernel.workspace = true
quote.workspace = true
syn.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["-D", "warnings"]

[package.metadata.deb]
name = "amaru"
maintainer = "Amaru Maintainers <amaru@pragma.builders>"
copyright = "2026 PRAGMA"
depends = "$auto"
maintainer-scripts = "../../.github/debian/"
section = "utils"
priority = "optional"
systemd-units = { enable = false, start = false }
assets = [
  ["target/release/amaru", "usr/bin/amaru", "755"],
  ["../../.github/debian/amaru.env", "etc/default/amaru", "644"],
  ["../../dist/share/man/man1/amaru.1", "usr/share/man/man1/amaru.1", "644"],
  ["../../dist/share/bash-completion/completions/amaru", "usr/share/bash-completion/completions/amaru", "644"],
  ["../../dist/share/zsh/site-functions/_amaru", "usr/share/zsh/vendor-completions/_amaru", "644"],
  ["../../dist/share/fish/vendor_completions.d/amaru.fish", "usr/share/fish/vendor_completions.d/amaru.fish", "644"],
  ["../../README.md", "usr/share/doc/amaru/README.md", "644"],
  ["../../CHANGELOG.md", "usr/share/doc/amaru/CHANGELOG.md", "644"],
  ["../../LICENSE", "usr/share/doc/amaru/LICENSE", "644"],
]

[package.metadata.generate-rpm]
name = "amaru"
summary = "A Cardano blockchain node implementation"
url = "https://github.com/pragma-org/amaru"
pre_install_script = "../../.github/rpm/pre-install.sh"
post_install_script = "../../.github/rpm/post-install.sh"
pre_uninstall_script = "../../.github/rpm/pre-uninstall.sh"
post_uninstall_script = "../../.github/rpm/post-uninstall.sh"
assets = [
  { source = "target/release/amaru", dest = "/usr/bin/amaru", mode = "0755" },
  { source = "../../.github/debian/amaru.env", dest = "/etc/sysconfig/amaru", mode = "0644", config = "noreplace" },
  { source = "../../.github/debian/amaru.service", dest = "/usr/lib/systemd/system/amaru.service", mode = "0644" },
  { source = "../../dist/share/man/man1/amaru.1", dest = "/usr/share/man/man1/amaru.1", mode = "0644" },
  { source = "../../dist/share/bash-completion/completions/amaru", dest = "/usr/share/bash-completion/completions/amaru", mode = "0644" },
  { source = "../../dist/share/zsh/site-functions/_amaru", dest = "/usr/share/zsh/vendor-completions/_amaru", mode = "0644" },
  { source = "../../dist/share/fish/vendor_completions.d/amaru.fish", dest = "/usr/share/fish/vendor_completions.d/amaru.fish", mode = "0644" },
  { source = "../../README.md", dest = "/usr/share/doc/amaru/README.md", mode = "0644" },
  { source = "../../CHANGELOG.md", dest = "/usr/share/doc/amaru/CHANGELOG.md", mode = "0644" },
  { source = "../../LICENSE", dest = "/usr/share/doc/amaru/LICENSE", mode = "0644" },
]
