[package]
name = "pure-stage"
version.workspace = true
edition.workspace = true
description = "A library for building and running simulations of distributed systems."
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/pure-stage"
readme = "README.md"
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []

[dependencies]
amaru-observability.workspace = true
anyhow.workspace = true
cbor4ii.workspace = true
either.workspace = true
erased-serde.workspace = true
futures-util.workspace = true
getrandom = { version = "0.3", features = ["wasm_js"] }
hex.workspace = true
parking_lot.workspace = true
pretty_assertions.workspace = true
rand = { workspace = true }
serde = { workspace = true, features = ["derive", "alloc", "rc"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "time", "macros"] }
tracing-subscriber.workspace = true
tracing.workspace = true
typetag.workspace = true

[package.metadata.cargo-machete]
ignored = ["getrandom"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "time", "rt-multi-thread"] }

[lints]
workspace = true
